# cs134

./: .gitignore
assignment3/: CMakeLists.txt  package.xml
assignment3/launch/: run.launch
assignment3/msg/: YawPitchCommand.msg
assignment3/scripts/: pydefinerobot.py  pymovetoexplicit.py  pymovetoimplicit.py  pysendcommands.py  pyvariablespeed.py
boogaloo/: CMakeLists.txt  README.md  package.xml
boogaloo/assets/: 134green.joblib  134orange.joblib  134pink.joblib
boogaloo/launch/: runsolver.launch  setuphebi.launch  viewurdf.launch
boogaloo/msg/: Activation.msg  Detection.msg  JointCommand.msg  MassChange.msg  RobotState.msg  ThrowCommand.msg
boogaloo/scripts/: logiccontroller.py  pydetectobject.py  pydetectobject_cleaned.py  scriptedpickup.py  scriptedthrow.py
boogaloo/src/: armcontroller.cpp  armcontroller.hpp  common.hpp  kinematics.cpp  kinematics.hpp  splinemanager.cpp  splinemanager.hpp
boogaloo/urdf/: robot_approx.urdf
hw2code/scripts/: pydefinerobot.py  pysendcommands.py
hw4code/detector/: cascade.xml  cascade_tape.xml
hw4code/launch/: run.launch
hw4code/scripts/: pydetectobject.py  pymovetoimplicit.py
hw5code/: CMakeLists.txt  package.xml
hw5code/launch/: run.launch  viewurdf.launch  viewurdf_cdot.launch
hw5code/msg/: ThrowCommand.msg
hw5code/rviz/: viewrobot.rviz
hw5code/scripts/: pydefinerobot.py  pyfkinnode_cdot.py  pyfkinnode_nic.py  pymovetoexplicit.py
hw5code/urdf/: robot_approx.urdf  robot_cdot_approx.urdf  robot_nic_approx.urdf
hw6code/launch/: runsolver.launch  viewurdf.launch
hw6code/msg/: PoseCommand.msg
hw6code/scripts/: pydefinerobot.py
hw6code/src/: armcontroller.cpp  armcontroller.hpp  kinematics.cpp  kinematics.hpp  splinemanager.cpp
hw6code/urdf/: robot_approx.urdf
tunecode/scripts/: config.py  float.py  gravity.py  robotutils.py  start.py  triangle.py  tune.py
