<?xml version="1.0"?>
<package format="2">
  <name>hw5code</name>
  <version>0.0.0</version>
  <description>The hw5code package</description>

  <!-- A maintainer and license tag are required, but leave as todo -->
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <!-- Dependencies (can be catkin packages or system dependencies) -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hebiros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>hebiros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>hebiros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
